--- a/.github/actions/helm-validator/action.yaml
+++ b/.github/actions/helm-validator/action.yaml
@@ -40,6 +40,7 @@ runs:
     - name: Download and wrap KEDA ScaledObject CRD schema
       shell: bash
       run: |
+        mkdir -p crds/
         # Fetch CRD from KEDA GitHub or your cluster
         curl -sL https://raw.githubusercontent.com/kedacore/keda/main/config/crd/bases/keda.sh_scaledobjects.yaml -o scaledobject-crd.yaml
 
