--- a/.github/actions/versioning/action.yml
+++ b/.github/actions/versioning/action.yml
@@ -31,7 +31,7 @@ runs:
         if [[ "${{ github.ref }}" == "refs/heads/main" ]]; then
           echo "Bumping version"
           # Incrementing the patch version
-          CHART_FILE="charts/${{ inputs.chartName }}/Chart.yaml"
+          CHART_FILE="${{ inputs.chartName }}/Chart.yaml"
           VERSION_LINE=$(grep '^version:' "$CHART_FILE")
           VERSION=$(echo "$VERSION_LINE" | cut -d: -f2 | tr -d ' ')
           PATCH_VERSION=$(echo "$VERSION" | cut -d. -f3)
@@ -48,7 +48,7 @@ runs:
     - name: Commit and tag updated version if version was changed
       if: github.ref == 'refs/heads/main'
       run: |
-        git commit charts/${{ inputs.chartName }}/Chart.yaml
+        git commit ${{ inputs.chartName }}/Chart.yaml
         git commit -m "Bump version to ${{ env.VERSION }}"
         git tag -a "${{ env.VERSION }}" -m "Release version ${{ env.VERSION }}"
         git push && git push --tags
