--- a/.github/actions/versioning/action.yml
+++ b/.github/actions/versioning/action.yml
@@ -35,9 +35,9 @@ runs:
           PATCH_VERSION=$((PATCH_VERSION + 1))
           NEW_VERSION="$MAJOR_VERSION.$MINOR_VERSION.$PATCH_VERSION"
           echo "New version: $NEW_VERSION"
-          sed -i 's/^version: .*/appVersion: "$NEW_VERSION"/' $CHART_FILE
           echo "VERSION=$NEW_VERSION" >> $GITHUB_ENV
           echo "VERSION=$NEW_VERSION" >> "$GITHUB_OUTPUT"
+          sed -i 's/^version: .*/appVersion: "${{ env.VERSION }}"/' $CHART_FILE
         else
           echo "Skipping version bump"
         fi
