--- a/.github/actions/versioning/action.yml
+++ b/.github/actions/versioning/action.yml
@@ -37,7 +37,7 @@ runs:
           echo "New version: $NEW_VERSION"
           echo "VERSION=$NEW_VERSION" >> $GITHUB_ENV
           echo "VERSION=$NEW_VERSION" >> "$GITHUB_OUTPUT"
-          sed -i 's/^version: .*/appVersion: "${{ env.VERSION }}"/' $CHART_FILE
+          sed -i 's/^version: .*/version: "${{ env.VERSION }}"/' $CHART_FILE
         else
           echo "Skipping version bump"
         fi
