--- a/.github/actions/versioning/action.yml
+++ b/.github/actions/versioning/action.yml
@@ -22,11 +22,12 @@ runs:
           CHART_FILE="${{ inputs.chartName }}/Chart.yaml"
           VERSION_LINE=$(grep '^version:' "$CHART_FILE")
           VERSION=$(echo "$VERSION_LINE" | cut -d: -f2 | tr -d ' ')
+          echo $VERSION
           MAJOR_VERSION=$(echo "$VERSION" | cut -d. -f1)
           MINOR_VERSION=$(echo "$VERSION" | cut -d. -f2)
           PATCH_VERSION=$(echo "$VERSION" | cut -d. -f3)
           PATCH_VERSION=$((PATCH_VERSION + 1))
-          NEW_VERSION="$MAJOR_VERSION.$MINOR_VERSION.$PATCH_VERSION"
+          NEW_VERSION="${MAJOR_VERSION}.${MINOR_VERSION}.${PATCH_VERSION}"
           echo "New version: $NEW_VERSION"
           echo "VERSION=$NEW_VERSION" >> $GITHUB_ENV
           echo "VERSION=$NEW_VERSION" >> "$GITHUB_OUTPUT"
