--- a/.github/actions/versioning/action.yml
+++ b/.github/actions/versioning/action.yml
@@ -28,7 +28,7 @@ runs:
           PATCH_VERSION=$(echo "$VERSION" | cut -d. -f3)
           PATCH_VERSION=$((PATCH_VERSION + 1))
           NEW_VERSION="${MAJOR_VERSION}.${MINOR_VERSION}.${PATCH_VERSION}"
-          echo "New version: $NEW_VERSION"
+          echo "New version: ${NEW_VERSION}"
           echo "VERSION=$NEW_VERSION" >> $GITHUB_ENV
           echo "VERSION=$NEW_VERSION" >> "$GITHUB_OUTPUT"
           sed -i "s/^version: .*/version: $NEW_VERSION/" $CHART_FILE
