--- a/.github/actions/versioning/action.yml
+++ b/.github/actions/versioning/action.yml
@@ -22,7 +22,7 @@ runs:
           CHART_FILE="${{ inputs.chartName }}/Chart.yaml"
           VERSION_LINE=$(grep '^version:' "$CHART_FILE")
           VERSION=$(echo $VERSION_LINE | cut -d: -f2 | tr -d ' ')
-          VERSION="${VERSION%\"}"; str="${VERSION#\"}"
+          VERSION="${VERSION%\"}"; VERSION="${VERSION#\"}"
           echo $VERSION
           MAJOR_VERSION=$(echo $VERSION | cut -d. -f1)
           MINOR_VERSION=$(echo $VERSION | cut -d. -f2)
