moved hardcoded values in scaledobject to values.yaml

--- a/apps/msd-test-app/dev/values.yaml
+++ b/apps/msd-test-app/dev/values.yaml
@@ -71,10 +71,12 @@ resources:
 
 autoscaling:
   enabled: false
-  minReplicas: 1
-  maxReplicas: 100
+  minReplicas: 2
+  maxReplicas: 10
   targetCPUUtilizationPercentage: 80
   # targetMemoryUtilizationPercentage: 80
+  triggers:
+    serverAddress: "http://prometheus-operated.argocd.svc"
 
 nodeSelector: {}
 
