--- a/charts/msd-test-app/templates/scaledobject.yaml
+++ b/charts/msd-test-app/templates/scaledobject.yaml
@@ -1,33 +1,33 @@
 apiVersion: keda.sh/v1alpha1
 kind: ScaledObject
 metadata:
-  name: msd-cpu-scaler
+  name: {{ include "msd-test-app.fullname" . }}
   namespace: argocd
 spec:
   scaleTargetRef:
-    name: msd-test-app
-  minReplicaCount: 2
-  maxReplicaCount: 10
+    name: {{ include "msd-test-app.fullname" . }}
+  minReplicaCount: {{ .Values.minReplicas }}
+  maxReplicaCount: {{ .Values.maxReplicas }}
   cooldownPeriod: 300
   triggers:
     - type: prometheus
       metadata:
-        serverAddress: http://prometheus-operated.argocd.svc:9090
+        serverAddress: {{ .Values.autoscaling.triggers.serverAddress }}
         metricName: msd_cpu_limit_reached_pods
         query: >
           count by (pod) (
             (
               count by (pod) (
                 (
-                  rate(container_cpu_usage_seconds_total{container!="POD", image=~".*msd-test-app.*"}[5m])
+                  rate(container_cpu_usage_seconds_total{container!="POD", image=~".*{{ include "msd-test-app.fullname" . }}.*"}[5m])
                   /
                   kube_pod_container_resource_limits_cpu_cores{container!="POD"}
                 ) > 0.9
               )
               ==
               count by (pod) (
-                kube_pod_container_resource_limits_cpu_cores{container!="POD", image=~".*msd-test-app.*"}
+                kube_pod_container_resource_limits_cpu_cores{container!="POD", image=~".*{{ include "msd-test-app.fullname" . }}.*"}
               )
             )
           )
-        threshold: "1"
+        threshold: "{{ .Values.autoscaling.triggers.threshold }}"
