--- a/charts/msd-test-app/values.yaml
+++ b/charts/msd-test-app/values.yaml
@@ -72,9 +72,12 @@ resources: {}
 autoscaling:
   enabled: false
   minReplicas: 1
-  maxReplicas: 100
+  maxReplicas: 10
   targetCPUUtilizationPercentage: 80
   # targetMemoryUtilizationPercentage: 80
+  triggers:
+    serverAddress: "example.svc:9090"
+    threshold: 1
 
 nodeSelector: {}
 
